--- a/Simple Chatty Bot/Chatty Bot welcomes you/task-info.yaml
+++ b/Simple Chatty Bot/Chatty Bot welcomes you/task-info.yaml
@@ -56,5 +56,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/113/stages/614/implement#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Wed, 09 Feb 2022 23:10:59 UTC
+record: 1
