--- a/Simple Chatty Bot/Guess the age/task-info.yaml
+++ b/Simple Chatty Bot/Guess the age/task-info.yaml
@@ -106,5 +106,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/113/stages/616/implement#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Thu, 10 Feb 2022 00:52:11 UTC
+record: 3
