--- a/Simple Chatty Bot/Learning numbers/task-info.yaml
+++ b/Simple Chatty Bot/Learning numbers/task-info.yaml
@@ -131,5 +131,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/113/stages/617/implement#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Thu, 10 Feb 2022 00:56:03 UTC
+record: 4
