--- a/Simple Chatty Bot/Print your name/task-info.yaml
+++ b/Simple Chatty Bot/Print your name/task-info.yaml
@@ -77,5 +77,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/113/stages/615/implement#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Wed, 09 Feb 2022 23:39:38 UTC
+record: 2
